Fixed canvas sizing on small windows with scrollbars

--- a/arean_freight/arean_freight.scss
+++ b/arean_freight/arean_freight.scss
@@ -324,6 +324,6 @@ canvas {
     canvas {
         clear: both;
         height: 40vh;
-        width: 100vw;
+        width: 100%;
     }
 }
